--- a/src/app/profile/page.module.css
+++ b/src/app/profile/page.module.css
@@ -239,7 +239,7 @@
   background: rgb(0 0 0 / 0.5);
   display: flex;
   align-items: flex-end;
-  z-index: 50;
+  z-index: 110;
 }
 
 .confirmSheet {
