--- a/src/components/DogSwitcher.module.css
+++ b/src/components/DogSwitcher.module.css
@@ -28,7 +28,7 @@
   background: rgb(0 0 0 / 0.45);
   display: flex;
   align-items: flex-end;
-  z-index: 50;
+  z-index: 110;
 }
 
 .sheet {
